--- a/style.css
+++ b/style.css
@@ -1,28 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
-    background-color: aqua;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    user-select: none;
+
+    color: white;
 }
-.cell{
-    width: 75px;
-    height: 75px;
-    border: 2px solid;
-    box-shadow: 0 0 0 2px;
-    line-height: 75px;
-    font-size: 50px;
+
+main {
+    background: #333333;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#header {
+    display: flex;
+    width: 235px;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+}
+#header .player {
+    background: #17122A;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: bold;
     cursor: pointer;
+    border-radius: 12px;
+    border: solid 4px #17122A;
+    opacity: 0.5;
+    transition: 0.3s;
 }
-#gameContainer{
-    font-family: "Permanent Marker", cursive;
-    text-align: center;
+#header .player:hover {
+    border: solid 4px #2A2343;
 }
-#cellContainer{
+#header .player-active {
+    opacity: 1;
+    border: solid 4px #2A2343;
+}
+#header #xPlayerDisplay {
+    color: #1892EA;
+}
+#header #oPlayerDisplay {
+    color: #A737FF;
+}
+
+#board {
     display: grid;
-    grid-template-columns: repeat(3, auto);
-    width: 225px;
-    margin: auto;
+    grid-template-columns: repeat(3, 70px);
+    grid-template-rows: repeat(3, 70px);
+    gap: 12px;
 }
+#board .cell {
+    background: #17122A;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.3s background;
+}
+#board .cell:hover {
+    background: #2A2343;
+}
+
 #restartBtn {
-    background-color: #ee4d2d ;
-    padding: 20px 30px;
-    border-radius: 30px;
-    gap: 30px;
+    margin-top: 30px;
+    width: 235px;
+    background: #17122A;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border: none;
+    border-radius: 12px;
+    font-weight: 600;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s background;
+    visibility: hidden;
+}
+#restartBtn:hover {
+    background: #2A2343;
 }
